Few tests - abort - BUG: KASAN: slab-use-after-free in mutex_is_locked
<7> [86.241404] xe 0000:03:00.0: [drm:drm_client_release [drm]] drm_fb_helper
<3> [86.249507] ==================================================================
<3> [86.249522] BUG: KASAN: slab-use-after-free in mutex_is_locked+0x17/0x40
<3> [86.249536] Read of size 8 at addr ffff888111c95f38 by task xe_module_load/1272
<3> [86.249547]
<3> [86.249551] CPU: 1 PID: 1272 Comm: xe_module_load Not tainted 6.6.0-rc3-xe #1
<3> [86.249563] Hardware name: Intel Corporation Tiger Lake Client Platform/TigerLake H DDR4 SODIMM RVP, BIOS TGLSFWI1.R00.4064.A00.2102041619 02/04/2021
<3> [86.249577] Call Trace:
<3> [86.249583] <TASK>
<3> [86.249588] dump_stack_lvl+0x64/0xb0
<3> [86.249598] print_report+0xd0/0x620
<3> [86.249608] ? __virt_addr_valid+0xf9/0x180
<3> [86.249618] ? mutex_is_locked+0x17/0x40
<3> [86.249627] ? __pfx___drmm_mutex_release+0x10/0x10 [drm]
<3> [86.249719] kasan_report+0x94/0xc0
<3> [86.249728] ? mutex_is_locked+0x17/0x40
<3> [86.249738] kasan_check_range+0xf6/0x1b0
<3> [86.249747] mutex_is_locked+0x17/0x40
<3> [86.249756] mutex_destroy+0x3d/0x80
<3> [86.249764] drm_managed_release+0x117/0x250 [drm]
<3> [86.249857] drm_dev_release+0x49/0x60 [drm]
<3> [86.249956] release_nodes+0x59/0x190
<3> [86.249965] ? lockdep_hardirqs_on_prepare+0x136/0x210
<3> [86.249976] ? _raw_spin_unlock_irqrestore+0x51/0x70
<3> [86.249988] devres_release_all+0xf8/0x140
<3> [86.249997] ? __pfx_devres_release_all+0x10/0x10
<3> [86.250009] device_unbind_cleanup+0x16/0xc0
<3> [86.250019] device_release_driver_internal+0x10d/0x160
<3> [86.250030] driver_detach+0x80/0xf0
<3> [86.250039] bus_remove_driver+0xb4/0x170
<3> [86.250050] pci_unregister_driver+0x31/0x120
<3> [86.250062] xe_exit+0x9/0x18 [xe]
<3> [86.250277] __x64_sys_delete_module+0x1fc/0x2f0
<3> [86.250290] ? __pfx___x64_sys_delete_module+0x10/0x10
<3> [86.250300] ? mark_held_locks+0x24/0x90
<3> [86.250309] ? lockdep_hardirqs_on_prepare+0x136/0x210
<3> [86.250320] ? __call_rcu_common.constprop.0+0x22c/0x480
<3> [86.250331] ? mark_held_locks+0x24/0x90
<3> [86.250341] ? lockdep_hardirqs_on_prepare+0x136/0x210
<3> [86.250351] ? syscall_enter_from_user_mode+0x21/0x50
<3> [86.250363] do_syscall_64+0x3c/0x90
<3> [86.250372] entry_SYSCALL_64_after_hwframe+0x6e/0xd8
<3> [86.250384] RIP: 0033:0x7f5c97a97a6b
<3> [86.250392] Code: 73 01 c3 48 8b 0d 25 c4 0c 00 f7 d8 64 89 01 48 83 c8 ff c3 66 2e 0f 1f 84 00 00 00 00 00 90 f3 0f 1e fa b8 b0 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d f5 c3 0c 00 f7 d8 64 89 01 48
<3> [86.250415] RSP: 002b:00007ffefd942f78 EFLAGS: 00000206 ORIG_RAX: 00000000000000b0
<3> [86.250428] RAX: ffffffffffffffda RBX: 000055e2c6e9b7e0 RCX: 00007f5c97a97a6b
<3> [86.250439] RDX: 000000000000001a RSI: 0000000000000800 RDI: 000055e2c6e9b848
<3> [86.250449] RBP: 0000000000000000 R08: 00000000ffffffff R09: 00007ffefd941d30
<3> [86.250460] R10: 0000000000000000 R11: 0000000000000206 R12: 0000000000000001
<3> [86.250470] R13: 0000000000000000 R14: 000055e2c6e9b848 R15: 00007f5c97c5d3e0
<3> [86.250483] </TASK>